--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="flex-wrapper">
             <button>Press</button>
             <div class="basic">Press</div>
-            <button class="grow"></button>
+            <button class="grow">Hello</button>
         </section>
     </body>
 </html>
